--- a/app/index.html
+++ b/app/index.html
@@ -70,6 +70,8 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
+    <script src="bower_components/marked/lib/marked.js"></script>
+    <script src="bower_components/angular-marked/dist/angular-marked.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -79,6 +81,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/new.js"></script>
         <script src="scripts/services/article.js"></script>
+        <script src="scripts/directives/mjs-article.js"></script>
         <!-- endbuild -->
 </body>
 </html>
